--- a/src/components/Cart/CartButton.module.css
+++ b/src/components/Cart/CartButton.module.css
@@ -1,7 +1,7 @@
 .button {
   background-color: transparent;
-  border-color: #1ad1b9;
-  color: #1ad1b9;
+  border-color: #1ab9d1;
+  color: #1ab0d1;
 }
 
 .button:hover,
